Cambios en Titulo, y subtitulos..

--- a/public/resources/components/views/home.html
+++ b/public/resources/components/views/home.html
@@ -11,9 +11,9 @@
 </div>
 <div class="splash-container">
   <div class="splash">
-    <h1 class="splash-head">BlueCompute Store!</h1>
-    <p class="splash-subhead">Check our awesome collections!</p>
-    <p><a class="pure-button pure-button-primary" href="#!/catalog">Browse Item Catalog</a></p>
+    <h1 class="splash-head">BlueCompute Store New!</h1>
+    <p class="splash-subhead">Check our awesome collections New!</p>
+    <p><a class="pure-button pure-button-primary" href="#!/catalog">Browse Item Catalog New</a></p>
   </div>
 </div>
 <!--
